--- a/index.html
+++ b/index.html
@@ -9,28 +9,40 @@
 </head>
 
 <body>
+    <picture>
+        <img src="static/logo Acai.png" style="max-width: 185px;" alt="">
+    </picture>
     <div>
-        <section id="AcaiBot">
-            <a href="/templates/cardapio.html">
-                <li>
-                    CARDAPIO
-                </li>
-            </a>
-            <img src="index0.html" alt="">
-           <a href="/index.html">
+        <a href="/templates/cardapio.html">
+            <li>
+                CARDAPIO
+            </li>
+        </a>
+        <a href="templates/cadastro.html">
             <li>
                 CONTRATE UM BOT
             </li>
-           </a>
-            <img src="" alt="">
-           <a href="#">
+        </a>
+        <img src="" alt="">
+        <a href="#">
             <li>
                 INSTAGRAM
             </li>
-           </a>
-            <img src="" alt="">
-        </section>
+        </a>
+        <footer style="align-items: center; justify-content: center; margin-top: 200px;">
+            <a href="https://pablo-kennediy.github.io/curriculo/" style="color: black;">infoprodutos.org</a>
+            © 2024 | Todos os
+            direitos
+            reservados
+        </footer>
     </div>
+    <style>
+        * {
+            margin: 0;
+            background-color: white;
+            color: black;
+        }
+    </style>
 </body>
 
 </html>
