--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/style.css">
-    <title>Açai Bot</title>
+    <title>
+        Açai Bot
+    </title>
 </head>
 
 <body>
@@ -18,24 +20,26 @@
                 CARDAPIO
             </li>
         </a>
-        <a href="templates/cadastro.html">
+        <a href="/templates/cadastro.html">
             <li>
                 CONTRATE UM BOT
             </li>
         </a>
         <img src="" alt="">
-        <a href="#">
+        <a href="https://www.instagram.com/ti.udia/">
             <li>
                 INSTAGRAM
             </li>
         </a>
-        <footer style="align-items: center; justify-content: center; margin-top: 200px;">
-            <a href="https://pablo-kennediy.github.io/curriculo/" style="color: black;">infoprodutos.org</a>
-            © 2024 | Todos os
-            direitos
-            reservados
-        </footer>
     </div>
+    <footer>
+        <p>
+            <a href="https://pablo-kennediy.github.io/curriculo/" style="color: black;">
+                infoprodutos.org
+            </a>
+            © 2024 | Todos os direitos reservados
+        </p>
+    </footer>
     <style>
         * {
             margin: 0;
