--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="static/logo Acai.png" type="image/x-icon">
     <link rel="stylesheet" href="static/style.css">
     <title>
         Açai Bot
@@ -11,16 +12,16 @@
 </head>
 
 <body>
-    <picture>
-        <img src="static/logo Acai.png" style="max-width: 185px;" alt="">
+    <picture id="logoAcai">
+        <img src="static/logo Acai.png" alt="">
     </picture>
     <div>
-        <a href="/templates/cardapio.html">
+        <a href="templates/cardapio.html">
             <li>
                 CARDAPIO
             </li>
         </a>
-        <a href="/templates/cadastro.html">
+        <a href="templates/cadastro.html">
             <li>
                 CONTRATE UM BOT
             </li>
@@ -35,9 +36,8 @@
     <footer>
         <p>
             <a href="https://pablo-kennediy.github.io/curriculo/" style="color: black;">
-                infoprodutos.org
+                infoprodutos.org © 2024 | Todos os direitos reservados
             </a>
-            © 2024 | Todos os direitos reservados
         </p>
     </footer>
     <style>
